--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="intro" id="introText">
-      i hope you read this, even if it's too late.
+      i hope you read this, my jagiya, my love & my baby.
     </div>
     <button class="btn" onclick="showLetter()">Read it</button>
 
